# ecommerce-astro-vue-fastapi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  vetur.config.js
.github/: dependabot.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  initial_data.py  main.py  schemas.py  upload.py
backend/app/addresses/: models.py  router.py  schemas.py
backend/app/auth/: authentication.py  dependencies.py  router.py  schemas.py  security.py
backend/app/carts/: models.py  router.py  schemas.py  services.py
backend/app/carts/cart/: models.py  router.py
backend/app/carts/cart_detail/: models.py  schemas.py
backend/app/category/: models.py  router.py  schemas.py
backend/app/orders/order/: enums.py  models.py  router.py  schemas.py  services.py
backend/app/orders/order_detail/: models.py
backend/app/payments/: enums.py  models.py  router.py  schemas.py  services.py
backend/app/products/product/: enums.py  models.py  router.py  schemas.py  services.py
backend/app/products/product_variants/: models.py  router.py  schemas.py  services.py
backend/app/static/downloads/: readme.md
backend/app/users/: enums.py  models.py  router.py  schemas.py  services.py
backend/seed_data/: kabupaten.sql  kategory.sql  kecamatan.sql  provinsi.sql
frontend/: .env.example  .prettierignore  .prettierrc  astro.config.mjs  components.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
frontend/src/: env.d.ts  types.ts
frontend/src/components/: BaseNavbar.astro  Breadcrumb.astro  ButtonExport.vue  ButtonSignout.astro  Cart.astro  Header.astro  Hero.astro  MenuNav.astro  NavLink.astro  NotFoundPage.astro  ProductCard.astro  ProductDisplay.astro  ProductDisplayForm.vue  Products.astro  TableCatagories.vue  TableOngkir.vue  TableTransaction.vue
frontend/src/layouts/: BaseLayout.astro  Layout.astro  (+2 more)
(+103 files in other folders)
